# metanalysis

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml
metanalysis/: __init__.py  bias.py  convert.py  effects.py  plots.py  pooling.py
tests/: test_bias.py  test_convert.py  test_dispatch.py  test_effects.py  test_plots.py  test_pooling.py
validation/: cross_check_statsmodels.py
